--- a/blunder.html
+++ b/blunder.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Chess Blunder Trainer</title>
+	<title>Chess Blunder Trainer - Prevent Blunders</title>
 
 	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,22 +18,21 @@
 	<link rel="stylesheet" href="assets/tobi.css" />
 
 </head>
+
 <div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
-      <span></span>
-    </label>
-
-    <ul class="menu__box">
-      		<li><a class="menu__item" href="index.html">Home</a></li>
-			<li><a class="menu__item" href="about.html">About</a></li>
-			<li><a class="menu__item" href="blunder.html">Avoid Blunders</a></li>
-			<li><a class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
-			<li><a class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
-			<li><a class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
-    </ul>
-  </div>
-
+	<input id="menu__toggle" type="checkbox" />
+	<label class="menu__btn" for="menu__toggle">
+		<span></span>
+	</label>
+	<ul class="menu__box">
+		<li><a class="menu__item" href="index.html">Home</a></li>
+		<li><a class="menu__item" href="about.html">About</a></li>
+		<li><a class="menu__item" href="blunder.html">Avoid Blunders</a></li>
+		<li><a class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
+		<li><a class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
+		<li><a class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
+	</ul>
+</div>
 
 <body>
 	<main>
@@ -54,36 +53,25 @@
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
 			</a>
 		</div>
-		<section class="app__screenshots app__section">
-			<div class="container">
-				<h2 class="app__section-title">Screenshots of the App</h2>
-			</div>
-			<div class="app__screenshots-wrapper container-desktop">
-				<div class="app__screenshots-list">
-					<a href="content/image/screenshot_1.jpg" class="lightbox">
-						<img src="content/image/screenshot_1.jpg" class="app__screenshot" alt="" />
-					</a>
-					<a href="content/image/screenshot_2.jpg" class="lightbox">
-						<img src="content/image/screenshot_2.jpg" class="app__screenshot" alt="" />
-					</a>
-					<a href="content/image/screenshot_3.jpg" class="lightbox">
-						<img src="content/image/screenshot_3.jpg" class="app__screenshot" alt="" />
-					</a>
-				</div>
+		<section class="app__fulldescription app__section container">
+			<h2 class="app__section-title">Additional Strategies to Avoid Blunders</h2>
+			<div class="app__fulldescription-content">
+				<p>While the chess blunder trainer app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
+				<ul>
+					<li><strong>Checks:</strong> Look for all checks that you can deliver. Often, checks that do not seem to lead to anything on further view, can open new ways of attack.</li>
+					<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
+					<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
+				</ul>
+				<p>In addition, make sure that you do not focus exclusively on your own strategy but actively take the opponent into account.</p>
+				<ul>
+					<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move and ask yourself, "Why did they make this move? What has changed in the position? What are they going to do next?"</li>
+					<li><strong>Identify immediate threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
+					<li><strong>Handle time pressure:</strong> When in time pressure, aim to simplify the position: exchange pieces to reduce complications, avoid overly complicated calculations</li>
+				</ul>
 			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
-			<h2 class="app__section-title">How the Chess Blunder Trainer App Works</h2>
-			<div class="app__fulldescription-content">
-				<ol>
-					<li><strong>Easily import</strong> your own chess games from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
-					<li><strong>Replay</strong> your blunders as personalized puzzles from your games and find better moves.</li>
-					<li><strong>Get support</strong> from the app in assessing your moves and recommendations of best moves based on chess engine evaluations.</li>
-					<li><strong>Learn</strong> from your blunders and improve your chess skills!</li>
-					<li><strong>Enjoy</strong> the app free and without ads.</li>
-					<p> </p>
-				</ol>
-			</div>
+			<p>Use the chess blunder trainer app to avoid repeating your mistakes! And have much fun improving your chess skills!</p>
 			<div class="app__buttons app__buttons--desktop">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
