--- a/blunder.html
+++ b/blunder.html
@@ -54,9 +54,9 @@
 			</a>
 		</div>
 		<section class="app__fulldescription app__section container">
-			<h2 class="app__section-title">Additional Strategies to Avoid Blunders</h2>
+			<h2 class="app__section-title">Strategies to Avoid Blunders</h2>
 			<div class="app__fulldescription-content">
-				<p>While the chess blunder trainer app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
+				<p>While the chess blunder trainer app helps you to learn from your own blunders in past games, you will also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
 				<ul>
 					<li><strong>Checks:</strong> Look for all checks that you can deliver. Often, checks that do not seem to lead to anything on further view, can open new ways of attack.</li>
 					<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
@@ -110,7 +110,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="assets/tobi.min.js" />
+	<script type="text/javascript" src="assets/tobi.min.js">
 	</script>
 	<script>
 		window.onload = function () {
