--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="assets/tobi.min.js" />
+	<script type="text/javascript" src="assets/tobi.min.js">
 	</script>
 	<script>
 		window.onload = function () {
