--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 				<h1 class="page__title">About</h1>
 			</header>
 			<div class="page__content">
-				<p>The chess blunder trainer tool is a chess software developed by Thomas Koeppen aka Mercutio1243 to create personalized puzzles from chess blunders.</p>
+				<p>The Chess Blunder Trainer tool is a chess software developed by Thomas Koeppen aka Mercutio1243 to create personalized chess puzzles from past blunder moves. It is available as a free Android app in the Google Play Store.</p>
 				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
 			</div>
 		</article>
@@ -90,7 +90,7 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="assets/tobi.min.js" />
+	<script type="text/javascript" src="assets/tobi.min.js">
 	</script>
 	<script>
 		window.onload = function () {
