--- a/blunder.html
+++ b/blunder.html
@@ -58,8 +58,8 @@
 			<div class="app__fulldescription-content">
 				<p>While the chess blunder trainer app helps you to learn from your own blunders in past games, you will also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
 				<ul>
-					<li><strong>Checks:</strong> Look for all checks that you can deliver. Often, checks that do not seem to lead to anything on further view, can open new ways of attack.</li>
-					<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
+					<li><strong>Checks:</strong> Check all checks that you can deliver to the opponent's king. Often, checks that do not seem to lead to anything, on closer inspection can open new ways of attack.</li>
+					<li><strong>Captures:</strong> Examine all possible captures of enemy pieces. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
 					<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
 				</ul>
 				<p>In addition, make sure that you do not focus exclusively on your own strategy but actively take the opponent into account.</p>
@@ -71,7 +71,7 @@
 			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
-			<p>Use the chess blunder trainer app to avoid repeating your mistakes! And have much fun improving your chess skills!</p>
+			<p>Use the chess blunder trainer app to avoid repeating your mistakes! And enjoy improving your chess skills!</p>
 			<div class="app__buttons app__buttons--desktop">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
