--- a/index.html
+++ b/index.html
@@ -141,8 +141,15 @@
 				});
 			}
 		});
+					</script>
+	<script></script>
+	var bg = jQuery("#bg1");
+	jQuery(window).resize("resizeBackground");
+	function resizeBackground() {
+	bg.height(jQuery(window).height() + 60);
+	}
 	</script>
-
-</body>
+	
+	</body>
 
 </html>
