--- a/blunder.html
+++ b/blunder.html
@@ -130,13 +130,13 @@
 			}
 		});
 	</script>
-	<script>
+	<!-- <script>
 		var bg = jQuery("#bg1");
 		jQuery(window).resize("resizeBackground");
 		function resizeBackground() {
 			bg.height(jQuery(window).height() + 60);
 		}
-	</script>
+	</script> -->
 
 </body>
 
