--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Chess Blunder Trainer - About</title>
+	<title>Chess Blunder Trainer - About the Development of the Chess Software to Avoid Blunders</title>
 
-	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
+	<meta name="description" content="Free software to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/logo_app_favicon.png" />
 
-	<meta property="og:title" content="About - Chess Blunder Trainer" />
-	<meta property="og:description" content="Free app to replay blunders from your own chess games and improve your chess skills!" />
+	<meta property="og:title" content="Chess Blunder Trainer Software" />
+	<meta property="og:description" content="Free software to replay blunders from your own chess games and improve your chess skills!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
 
 	<link rel="stylesheet" href="assets/style.css" />
@@ -18,7 +18,15 @@
 	<link rel="stylesheet" href="assets/tobi.css" />
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-H2MNTZRY5K');
+</script>
 <div class="hamburger-menu">
 	<input id="menu__toggle" type="checkbox" />
 	<label class="menu__btn" for="menu__toggle">
@@ -40,7 +48,7 @@
 		<header class="app__header container">
 			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo_app.png" alt="Chess Blunder Trainer App"></div>
 			<div class="app__infos">
-				<h1 class="app__name">Chess Blunder Trainer App</h1>
+				<h1 class="app__name">Chess Blunder Trainer Software</h1>
 				<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
 				<div class="app__buttons app__buttons--desktop">
 					<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
