--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Chess Blunder Trainer</title>
+	<title>Chess Blunder Trainer - Free App to Generate Personalized Puzzles from your Chess Games</title>
 
 	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/logo_app_favicon.png" />
 
 	<meta property="og:title" content="Chess Blunder Trainer App" />
-	<meta property="og:description" content="Free app to replay blunders from your own chess games and improve your chess skills!" />
+	<meta property="og:description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
 
 	<link rel="stylesheet" href="assets/style.css" />
@@ -18,6 +18,15 @@
 	<link rel="stylesheet" href="assets/tobi.css" />
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H2MNTZRY5K');
+</script>
 <div class="hamburger-menu">
 	<input id="menu__toggle" type="checkbox" />
 	<label class="menu__btn" for="menu__toggle">
@@ -60,14 +69,14 @@
 			</div>
 			<div class="app__screenshots-wrapper container-desktop">
 				<div class="app__screenshots-list">
-					<a href="content/image/screenshot_1.jpg" class="lightbox">
-						<img src="content/image/screenshot_1.jpg" class="app__screenshot" alt="" />
+					<a href="content/image/chess_blunder_trainer_app_analysis.jpg" class="lightbox">
+						<img src="content/image/chess_blunder_trainer_app_analysis.jpg" class="app__screenshot" alt="Use the chess blunder trainer to learn from your past blunders" />
 					</a>
-					<a href="content/image/screenshot_2.jpg" class="lightbox">
-						<img src="content/image/screenshot_2.jpg" class="app__screenshot" alt="" />
+					<a href="content/image/chess_blunder_trainer_software_puzzles.jpg" class="lightbox">
+						<img src="content/image/chess_blunder_trainer_software_puzzles.jpg" class="app__screenshot" alt="Avoid repeating your past blunders" />
 					</a>
-					<a href="content/image/screenshot_3.jpg" class="lightbox">
-						<img src="content/image/screenshot_3.jpg" class="app__screenshot" alt="" />
+					<a href="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="lightbox">
+						<img src="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="app__screenshot" alt="Import offline games and online games from chess.com or Lichess" />
 					</a>
 				</div>
 			</div>
