--- a/blunder.html
+++ b/blunder.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8" />
 	<title>Chess Blunder Trainer - Strategies to Avoid Blunders in your Chess Games</title>
 
-	<meta name="description" content="Use the free chess app to avoid repeating your chess blunders!" />
+	<meta name="description" content="Use the free Chess Blunder Trainer app to learn to avoid chess blunders!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/logo_app_favicon.png" />
 
 	<meta property="og:title" content="How to avoid blunders in your chess games" />
-	<meta property="og:description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
+	<meta property="og:description" content="Use the free Chess Blunder Trainer app to learn to avoid chess blunders!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
 
 	<link rel="stylesheet" href="assets/style.css" />
@@ -21,11 +21,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
 
-  gtag('config', 'G-H2MNTZRY5K');
+	gtag('config', 'G-H2MNTZRY5K');
 </script>
 <div class="hamburger-menu">
 	<input id="menu__toggle" type="checkbox" />
@@ -138,13 +138,6 @@
 			}
 		});
 	</script>
-	<!-- <script>
-		var bg = jQuery("#bg1");
-		jQuery(window).resize("resizeBackground");
-		function resizeBackground() {
-			bg.height(jQuery(window).height() + 60);
-		}
-	</script> -->
 
 </body>
 
