--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		<section id="about" class="app__fulldescription app__section container">
 			<h2 class="app__section-title">About the Software</h2>
 			<div class="app__fulldescription-content">
-				<p>The Chess Blunder Trainer is a chess software developed by Thomas Koeppen. The tool is available as a free Android app in the Google Play Store.</p>
+				<p>The app is a chess software developed by Thomas Koeppen. The tool is available as a free Android app in the Google Play Store.</p>
 				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
